Move results into model and fix documentation
