# pkg/web/sources.go
@@ -20,8 +20,8 @@ import (
 	"time"
 
 	"github.com/ISDuBA/ISDuBA/pkg/config"
+	"github.com/ISDuBA/ISDuBA/pkg/models"
 	"github.com/ISDuBA/ISDuBA/pkg/sources"
-	"github.com/ISDuBA/ISDuBA/pkg/web/results"
 	"github.com/gin-gonic/gin"
 )
 
@@ -135,14 +135,14 @@ func showStats(ctx *gin.Context) (bool, bool) {
 // @Description       Returns the source configuration and metadata of all sources.
 // @Param             stats query  bool    false  "Enable statistic"
 // @Produce           json
-// @Success           201 {object} results.Success
-// @Failure           400 {object} results.Error "could not parse stats"
+// @Success           201 {object} models.Success
+// @Failure           400 {object} models.Error "could not parse stats"
 // @Router /sources [get]
 
 func (c *Controller) viewSources(ctx *gin.Context) {
 	stats, ok := showStats(ctx)
 	if !ok {
-		results.SendErrorMessage(ctx, http.StatusBadRequest, "could not parse stats")
+		models.SendErrorMessage(ctx, http.StatusBadRequest, "could not parse stats")
 		return
 	}
 	srcs := []*source{}
@@ -245,27 +245,27 @@ func (c *Controller) createSource(ctx *gin.Context) {
 // @Description       Deletes the source configuration with the specified id.
 // @Param             id   path      int  true  "Source ID"
 // @Produce           json
-// @Success           200 {object} results.Success "source deleted"
-// @Failure           400 {object} results.Error
-// @Failure           404 {object} results.Error
-// @Failure           500 {object} results.Error
+// @Success           200 {object} models.Success "source deleted"
+// @Failure           400 {object} models.Error
+// @Failure           404 {object} models.Error
+// @Failure           500 {object} models.Error
 // @Router /sources/{id} [delete]
 func (c *Controller) deleteSource(ctx *gin.Context) {
 	var input struct {
 		ID int64 `uri:"id" binding:"required"`
 	}
 	if err := ctx.ShouldBindUri(&input); err != nil {
-		results.SendError(ctx, http.StatusBadRequest, err)
+		models.SendError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	switch err := c.sm.RemoveSource(input.ID); {
 	case err == nil:
-		results.SendSuccess(ctx, http.StatusOK, "source deleted")
+		models.SendSuccess(ctx, http.StatusOK, "source deleted")
 	case errors.Is(err, sources.NoSuchEntryError("")):
-		results.SendError(ctx, http.StatusNotFound, err)
+		models.SendError(ctx, http.StatusNotFound, err)
 	default:
 		slog.Error("database error", "err", err)
-		results.SendError(ctx, http.StatusInternalServerError, err)
+		models.SendError(ctx, http.StatusInternalServerError, err)
 	}
 }
 
@@ -275,9 +275,9 @@ func (c *Controller) deleteSource(ctx *gin.Context) {
 // @Param             id    path   int     true  "Source ID"
 // @Param             stats query  bool    false  "Enable statistic"
 // @Produce           json
-// @Success           201 {object} results.Success
-// @Failure           400 {object} results.Error "could not parse stats"
-// @Failure           404 {object} results.Error
+// @Success           201 {object} models.Success
+// @Failure           400 {object} models.Error "could not parse stats"
+// @Failure           404 {object} models.Error
 // @Router /sources/{id} [get]
 func (c *Controller) viewSource(ctx *gin.Context) {
 	var input struct {
@@ -289,7 +289,7 @@ func (c *Controller) viewSource(ctx *gin.Context) {
 	}
 	stats, ok := showStats(ctx)
 	if !ok {
-		results.SendErrorMessage(ctx, http.StatusBadRequest, "could not parse stats")
+		models.SendErrorMessage(ctx, http.StatusBadRequest, "could not parse stats")
 		return
 	}
 	si := c.sm.Source(input.ID, stats)
@@ -306,17 +306,17 @@ func (c *Controller) viewSource(ctx *gin.Context) {
 // @Param             id    path   int     true  "Source ID"
 // @Accept            json
 // @Produce           json
-// @Success           201 {object} results.Success
-// @Failure           400 {object} results.Error
-// @Failure           404 {object} results.Error "not found"
-// @Failure           500 {object} results.Error
+// @Success           201 {object} models.Success
+// @Failure           400 {object} models.Error
+// @Failure           404 {object} models.Error "not found"
+// @Failure           500 {object} models.Error
 // @Router /sources/{id} [put]
 func (c *Controller) updateSource(ctx *gin.Context) {
 	var input struct {
 		SourceID int64 `uri:"id"`
 	}
 	if err := ctx.ShouldBindUri(&input); err != nil {
-		results.SendError(ctx, http.StatusBadRequest, err)
+		models.SendError(ctx, http.StatusBadRequest, err)
 		return
 	}
 	switch ur, err := c.sm.UpdateSource(input.SourceID, func(su *sources.SourceUpdater) error {
@@ -488,14 +488,14 @@ func (c *Controller) updateSource(ctx *gin.Context) {
 		return nil
 	}); {
 	case err == nil:
-		results.SendSuccess(ctx, http.StatusOK, ur.String())
+		models.SendSuccess(ctx, http.StatusOK, ur.String())
 	case errors.Is(err, sources.NoSuchEntryError("")):
-		results.SendErrorMessage(ctx, http.StatusNotFound, "not found")
+		models.SendErrorMessage(ctx, http.StatusNotFound, "not found")
 	case errors.Is(err, sources.InvalidArgumentError("")):
-		results.SendError(ctx, http.StatusBadRequest, err)
+		models.SendError(ctx, http.StatusBadRequest, err)
 	default:
 		slog.Error("database error", "err", err)
-		results.SendError(ctx, http.StatusInternalServerError, err)
+		models.SendError(ctx, http.StatusInternalServerError, err)
 	}
 }
 
@@ -516,9 +516,9 @@ func validateHeaders(headers []string) error {
 // @Param             stats query  bool    false  "Enable statistic"
 // @Produce           json
 // @Success           200 {array} feed
-// @Failure           400 {object} results.Error "could not parse stats"
-// @Failure           404 {object} results.Error
-// @Failure           500 {object} results.Error
+// @Failure           400 {object} models.Error "could not parse stats"
+// @Failure           404 {object} models.Error
+// @Failure           500 {object} models.Error
 // @Router /sources/{id}/feeds [get]
 func (c *Controller) viewFeeds(ctx *gin.Context) {
 	var input struct {
@@ -530,7 +530,7 @@ func (c *Controller) viewFeeds(ctx *gin.Context) {
 	}
 	stats, ok := showStats(ctx)
 	if !ok {
-		results.SendErrorMessage(ctx, http.StatusBadRequest, "could not parse stats")
+		models.SendErrorMessage(ctx, http.StatusBadRequest, "could not parse stats")
 		return
 	}
 	feeds := []*feed{}
@@ -540,24 +540,24 @@ func (c *Controller) viewFeeds(ctx *gin.Context) {
 	case err == nil:
 		ctx.JSON(http.StatusOK, gin.H{"feeds": feeds})
 	case errors.Is(err, sources.NoSuchEntryError("")):
-		results.SendError(ctx, http.StatusNotFound, err)
+		models.SendError(ctx, http.StatusNotFound, err)
 	default:
 		slog.Error("database error", "err", err)
-		results.SendError(ctx, http.StatusInternalServerError, err)
+		models.SendError(ctx, http.StatusInternalServerError, err)
 	}
 }
 
 // createFeed is an endpoint that creates a feed.
-// @Summary           Returns feeds.
-// @Description       Returns all feed configurations and metadata.
+// @Summary           Creates a feed.
+// @Description       Creates a feed with the specified configuration.
 // @Param             id    path   int     true  "Source ID"
 // @Param             stats query  bool    false  "Enable statistic"
 // @Produce           json
 // @Success           200 {array} feed
-// @Failure           400 {object} results.Error "could not parse stats"
-// @Failure           404 {object} results.Error
-// @Failure           500 {object} results.Error
-// @Router /sources/{id}/feeds [get]
+// @Failure           400 {object} models.Error "could not parse stats"
+// @Failure           404 {object} models.Error
+// @Failure           500 {object} models.Error
+// @Router /sources/{id}/feeds [post]
 func (c *Controller) createFeed(ctx *gin.Context) {
 	var input struct {
 		SourceID int64  `uri:"id"`
